--- a/public/dash.html
+++ b/public/dash.html
@@ -33,8 +33,8 @@
                 <td>Surename</td>
                 <td>Amount</td>
                 <td>Duration (Months)</td>
-                <td><button class="dash-btn" id="update req">Update Request</button></td>
-                <td><button class="dash-btn" id="cancel-req">Cancel Request</button></td>
+                <td><button class="dash-btn submit" id="update-req">Update Request</button></td>
+                <td><button class="dash-btn submit" id="cancel-req">Cancel Request</button></td>
             </tr>
         </table>
     </div>
