login functionality added

--- a/public/admin.html
+++ b/public/admin.html
@@ -14,9 +14,10 @@
     <div class="topnav">
         <a class="active" href="main.html">Home</a>
         <div class="right">
-            <a href="login.html">Login</a>
+            <a href="#" id="id"></a>
             <a href="register.html">Register</a>
             <a href="about.html">About</a>
+            <a href="main.html" id="logout">Logout</a>
         </div>
     </div>
 
@@ -30,7 +31,7 @@
             <th>Amount</th>
             <th>Duration (Months)</th>
             <th>userId</th>
-        </tr>        
+        </tr>
     </table>
     <form action="">
         <div class="row">
