--- a/public/dash.html
+++ b/public/dash.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main.css">
-    <script></script>
     <title>Awa Money</title>
 </head>
 
@@ -14,9 +13,10 @@
     <div class="topnav">
         <a class="active" href="main.html">Home</a>
         <div class="right">
-            <a href="login.html">Login</a>
+            <a href="#"id="id"></a>
             <a href="register.html">Register</a>
             <a href="about.html">About</a>
+            <a href="main.html" id="logout">Logout</a>
         </div>
     </div>
    <div> <button class="submit" id="user-requests" style="margin: 20px">Get Requests</button></div>
