--- a/public/dash.html
+++ b/public/dash.html
@@ -25,8 +25,10 @@
         <h1>My Dash</h1>
         <table id="dash-request">
             <tr>
-                <th>Amount</th>
                 <th>Request Id</th>
+                <th>Amount</th>
+                <th>Status</th>
+
             </tr>        
         </table>
         <form action="">
