user modify implemented

--- a/public/dash.html
+++ b/public/dash.html
@@ -54,7 +54,7 @@
                             <label for="uname">New Amount</label>
                         </div>
                         <div class="row-75">
-                            <input type="number" id="username" name="username" placeholder="">
+                            <input type="number" id="new-amount" name="username" placeholder="">
                         </div>
                     </div>                   
                     <br>
