admin approve and decline implemented

--- a/public/admin.html
+++ b/public/admin.html
@@ -29,8 +29,8 @@
             <th>First name</th>
             <th>Surename</th>
             <th>Amount</th>
-            <th>Duration (Months)</th>
-            <th>userId</th>
+            <th>Request Id</th>
+            <th>Request Status</th>
         </tr>
     </table>
     <form action="">
