added validation of inputs to my forms

--- a/public/request.html
+++ b/public/request.html
@@ -24,26 +24,29 @@
         <h1>Make your request here</h1>
         <form action="">
             <div class="row">
-                <div class="col-25">
+                <div class="col-25 name">
                     <label for="request">First Name</label>
                 </div>
                 <div class="row-75">
+                        <p id="hiden" class="hiden" style="color: red;">Please fill out your Name</p>
                     <input type="text" id="request-name" name="request" placeholder="Your First Name">
                 </div>
             </div>
             <div class="row">
-                <div class="col-25">
+                <div class="col-25 surname">
                     <label for="request">Surname</label>
                 </div>
                 <div class="row-75">
+                    <p id="hides" class="hiden" style="color: red;">Please fill out your Name</p>
                     <input type="text" id="request-surname" name="request" placeholder="Your Surname">
                 </div>
             </div>
             <div class="row">
-                <div class="col-25">
+                <div class="col-25 amount">
                     <label for="request">Amount needed</label>
                 </div>
                 <div class="row-75">
+                        <p id="hidea" class="hiden" style="color: red;">Please fill out your Name</p>
                     <input type="number" id="loan-request" name="request" placeholder="Amount of loan">
                 </div>
             </div> <br>
