--- a/public/register.html
+++ b/public/register.html
@@ -31,7 +31,7 @@
                     <label for="fname">First Name</label>
                 </div>
                 <div class="row-75">
-                        <p id="w-fname"></p>
+                        <p id="w-fname" style="color: red;"></p>
                     <input type="text" id="fname" name="firstname" placeholder="Your name">
                 </div>
             </div>
@@ -40,7 +40,7 @@
                     <label for="surname">Surname</label>
                 </div>
                 <div class="row-75">
-                        <p id="w-surname"></p>
+                        <p id="w-surname" style="color: red;"></p>
                     <input type="text" id="surname" name="surName" placeholder="Your surname">
                 </div>
             </div>
@@ -49,7 +49,7 @@
                     <label for="email">Email</label>
                 </div>
                 <div class="row-75">
-                        <p id="w-email"></p>
+                        <p id="w-email" style="color: red;"></p>
                     <input type="email" id="email" name="email" placeholder="Your email">
                 </div>
             </div>
@@ -58,6 +58,7 @@
                     <label for="phone">Phone Number</label>
                 </div>
                 <div class="row-75">
+                        <p id="w-num" style="color: red;"></p>
                     <input type="tel" id="phone" name="pnumber" placeholder="Your Phone Number">
                 </div>
             </div>
@@ -66,6 +67,7 @@
                     <label for="uname">User Name</label>
                 </div>
                 <div class="row-75">
+                        <p id="w-user" style="color: red;"></p>
                     <input type="text" id="uname" name="username" placeholder="Your Username">
                 </div>
             </div>
@@ -74,7 +76,7 @@
                     <label for="pword">Password</label>
                 </div>
                 <div class="row-75">
-                        <p id="w-pword"></p>
+                        <p id="w-pword" style="color: red;"></p>
                     <input type="password" id="pword" name="password" placeholder="Your password">
                 </div>
             </div>
