--- a/public/admin.html
+++ b/public/admin.html
@@ -28,6 +28,7 @@
         <tr>
             <th>First name</th>
             <th>Surename</th>
+            <th>User Id</th>
             <th>Amount</th>
             <th>Request Id</th>
             <th>Request Status</th>
